--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pallo/setup",
+    "name": "ride/setup",
     "description": "Setup hooks for the Composer dependency manager.",
     "version": "0.1.3",
     "type": "composer-installer",
@@ -14,10 +14,10 @@
     },
     "autoload": {
         "psr-0": { 
-            "pallo\\setup\\": "src/" 
+            "ride\\setup\\": "src/" 
         }
     },   
     "extra": {
-        "class": "pallo\\setup\\ComposerInstaller"
+        "class": "ride\\setup\\ComposerInstaller"
     }
 }
