updated readme, updated composer.json for 1.0

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ride/setup",
     "description": "Setup hooks for the Composer dependency manager.",
-    "version": "0.1.4",
+    "license": "MIT",
     "type": "composer-installer",
     "authors": [
         {
