--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,17 @@
         {
             "name": "Joris Vandeweerd",
             "email": "joris@statik.be"
+        },
+        {
+            "name": "Kristof Serré",
+            "email": "kristof@statik.be"
         }
     ],
     "require": {
-        "composer-plugin-api": "^2.0"
+        "composer-plugin-api": "^1.0 || ^2.0"
+    },
+    "require-dev": {
+        "composer/composer": "^1.0 || ^2.0"
     },
     "autoload": {
         "psr-0": {
